--- a/frontend-app/src/app/pages/home/components/clientes/components/client-edit-modal/client-edit-modal.component.html
+++ b/frontend-app/src/app/pages/home/components/clientes/components/client-edit-modal/client-edit-modal.component.html
@@ -11,13 +11,15 @@
 
 <ion-content class="ion-padding">
   <form [formGroup]="editForm" (ngSubmit)="guardar()">
-    
+
     <ion-item>
       <ion-label position="stacked">Nombre *</ion-label>
       <ion-input formControlName="nombre" type="text" placeholder="Nombre completo"></ion-input>
-      <ion-note slot="error" *ngIf="editForm.get('nombre')?.invalid && editForm.get('nombre')?.touched">
-        El nombre es requerido
-      </ion-note>
+      @if (editForm.get('nombre')?.invalid && editForm.get('nombre')?.touched) {
+        <ion-note slot="error">
+          El nombre es requerido
+        </ion-note>
+      }
     </ion-item>
 
     <ion-item>
