--- a/frontend-app/src/app/pages/home/components/dashboard/components/top-customers/top-customers.component.html
+++ b/frontend-app/src/app/pages/home/components/dashboard/components/top-customers/top-customers.component.html
@@ -6,21 +6,25 @@
     </div>
   </div>
   <div class="panel-content list-content">
-    <div class="customer-item" *ngFor="let customer of topCustomers; let i = index">
-      <div class="customer-rank">{{ i + 1 }}</div>
-      <div class="customer-info">
-        <div class="customer-name">{{ customer.name }}</div>
-        <div class="customer-stats">
-          {{ customer.transactionCount }} compras
+    @for (customer of topCustomers; track customer; let i = $index) {
+      <div class="customer-item">
+        <div class="customer-rank">{{ i + 1 }}</div>
+        <div class="customer-info">
+          <div class="customer-name">{{ customer.name }}</div>
+          <div class="customer-stats">
+            {{ customer.transactionCount }} compras
+          </div>
+        </div>
+        <div class="customer-total">
+          {{ customer.totalSpent | currency:'USD':'symbol':'1.0-0' }}
         </div>
       </div>
-      <div class="customer-total">
-        {{ customer.totalSpent | currency:'USD':'symbol':'1.0-0' }}
+    }
+
+    @if (topCustomers.length === 0) {
+      <div class="empty-state">
+        <p>No hay datos disponibles</p>
       </div>
-    </div>
-    
-    <div *ngIf="topCustomers.length === 0" class="empty-state">
-      <p>No hay datos disponibles</p>
-    </div>
+    }
   </div>
 </div>
