--- a/frontend-app/src/app/shared/components/product-card/product-card.component.html
+++ b/frontend-app/src/app/shared/components/product-card/product-card.component.html
@@ -1,10 +1,16 @@
 <div class="product-card" (click)="onAdd()">
   <div class="icon-container">
     <!-- Icono por defecto si no hay imagen específica -->
-    <ion-icon name="shirt-outline" *ngIf="!product.image && product.nombre.toLowerCase().includes('cam')"></ion-icon>
-    <ion-icon name="pricetag-outline"
-      *ngIf="!product.image && !product.nombre.toLowerCase().includes('cam')"></ion-icon>
-    <img [src]="product.image" *ngIf="product.image" alt="Product Image">
+    @if (!product.image && product.nombre.toLowerCase().includes('cam')) {
+      <ion-icon name="shirt-outline"></ion-icon>
+    }
+    @if (!product.image && !product.nombre.toLowerCase().includes('cam')) {
+      <ion-icon name="pricetag-outline"
+      ></ion-icon>
+    }
+    @if (product.image) {
+      <img [src]="product.image" alt="Product Image">
+    }
   </div>
   <div class="product-name">
     {{ product.nombre }}
